# hamlib

./: Makefile.in  aclocal.m4  configure
alinco/: Makefile.in  alinco.c  alinco.h  dx77.c
aor/: Makefile.in  aor.c  aor.h  ar5000.c  ar8000.c  ar8200.c
bindings/: Makefile.in  hamlib.swg  rig.swg  rotator.swg
c++/: Makefile.in  rigclass.cc  rotclass.cc
doc/: Makefile.in  README.ft920  hamlib.cfg  rig.status
drake/: Makefile.in  drake.c  drake.h  r8b.c
dummy/: Makefile.in  dummy.c  dummy.h  rot_dummy.c  rot_dummy.h
easycomm/: Makefile.in  easycomm.c  easycomm.h
fodtrack/: Makefile.in  fodtrack.c  fodtrack.h
gnuradio/: Makefile.in  gnuradio.cc  gnuradio.h  gr.c  gr_priv.h  graudio.c  mc4020.c
icom/: Makefile.in  frame.c  ic275.c  ic475.c  ic706.c  ic718.c  ic725.c  ic735.c  ic737.c  ic756.c  ic775.c  ic821h.c  ic910.c  ic970.c  icall.c  icom.c  icom.h  icr7000.c  icr8500.c  omni.c  os456.c  os535.c
include/: Makefile.in  bandplan.h  config.h.in
jrc/: Makefile.in  jrc.c  jrc.h  nrd545.c
kachina/: 505dsp.c  Makefile.in  kachina.c  kachina.h
kenwood/: Makefile.am  Makefile.in  README.ts2k  k2.c  kenwood.c  kenwood.h  th.c  thd7.c  thf7.c  ts2000.c  ts2000.h  ts2000.txt  ts2k.c  ts2k.h  ts2k.status  ts2k_menu.c  ts2k_menu.h  ts440.c  ts450s.c  ts50s.c  ts570.c  ts790.c  ts850.c  ts870s.c  ts950.c
kylix/: Makefile.in
lib/: Makefile.in
libltdl/: Makefile.in  configure
macros/: Makefile.in
microtune/: Makefile.in  microtune.cc  microtune.h  module_4937.c
pcr/: Makefile.in  pcr.c  pcr.h  pcr100.c  pcr1000.c
perl/: Makefile.in
src/: cal.c  (+23 more)
tests/: Makefile.am  Makefile.am.ts2k  Makefile.in  dumpcaps.c  dumpmem.c  lex.rig_yy.c  lex.ts2k_yy.c  lex_keywords.h  lex_rotors.h  listrigs.c  rig.tab.c  rig.tab.h  rigcmd.c  rigcmd.h  rigctl.c  rigmatrix.c  rotctl.c  testcaps.c  testcmd.c  testptt.c  testrig.c  tests.h  testtrn.c  testts2k.c  testvfo.c  tree.h  ts2k.tab.c  ts2k.tab.h  tsctl.c
tests/rc/: Makefile  README  base.y  commandline.HOWTO  lex_hamlib.h  lex_rigs.h  parser.y  scanner.l  test.rc
(+78 files in other folders)
